--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@changesets/cli": "^2.27.1",
     "@eslint/js": "^9.39.1",
     "@types/node": "^22.10.2",
+    "@vitest/coverage-v8": "2.1.9",
     "@vitest/ui": "^2.1.8",
     "eslint": "^9.39.1",
     "prettier": "^3.4.2",
