--- a/package.json
+++ b/package.json
@@ -1,93 +1,27 @@
 {
-  "name": "@indodev/toolkit",
-  "version": "0.1.3",
-  "description": "Indonesian developer utilities for validation, formatting, and more",
-  "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "sideEffects": false,
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
-      }
-    },
-    "./nik": {
-      "import": {
-        "types": "./dist/nik/index.d.ts",
-        "default": "./dist/nik/index.js"
-      },
-      "require": {
-        "types": "./dist/nik/index.d.cts",
-        "default": "./dist/nik/index.cjs"
-      }
-    },
-    "./phone": {
-      "import": {
-        "types": "./dist/phone/index.d.ts",
-        "default": "./dist/phone/index.js"
-      },
-      "require": {
-        "types": "./dist/phone/index.d.cts",
-        "default": "./dist/phone/index.cjs"
-      }
-    },
-    "./currency": {
-      "import": {
-        "types": "./dist/currency/index.d.ts",
-        "default": "./dist/currency/index.js"
-      },
-      "require": {
-        "types": "./dist/currency/index.d.cts",
-        "default": "./dist/currency/index.cjs"
-      }
-    }
-  },
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ],
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
+  "name": "@indodev/monorepo",
+  "version": "0.0.0",
+  "private": true,
+  "description": "Monorepo for @indodev/toolkit library and documentation",
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "test:run": "vitest run",
-    "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\"",
-    "prepublishOnly": "pnpm run build && pnpm run test:run && publint",
-    "changeset": "changeset",
-    "release": "changeset publish"
+    "dev": "pnpm --filter @indodev/toolkit dev",
+    "dev:docs": "pnpm --filter docs dev",
+    "build": "pnpm --filter @indodev/toolkit build",
+    "build:docs": "pnpm --filter docs build",
+    "test": "pnpm --filter @indodev/toolkit test",
+    "test:ui": "pnpm --filter @indodev/toolkit test:ui",
+    "test:coverage": "pnpm --filter @indodev/toolkit test:coverage",
+    "lint": "pnpm --filter @indodev/toolkit lint",
+    "lint:fix": "pnpm --filter @indodev/toolkit lint:fix",
+    "format": "pnpm --filter @indodev/toolkit format",
+    "format:check": "pnpm --filter @indodev/toolkit format:check",
+    "typecheck": "pnpm --filter @indodev/toolkit typecheck",
+    "release": "pnpm --filter @indodev/toolkit release"
   },
   "keywords": [
+    "monorepo",
     "indonesia",
-    "indonesian",
-    "nik",
-    "validation",
-    "phone-number",
-    "currency",
-    "rupiah",
-    "terbilang",
-    "typescript",
-    "utilities",
-    "formatting",
-    "e-commerce",
-    "indonesia-utilities"
+    "utilities"
   ],
   "author": "Choirul Adam <choiruladamm@gmail.com>",
   "license": "MIT",
@@ -95,31 +29,8 @@
     "type": "git",
     "url": "git+https://github.com/choiruladamm/indo-dev-utils.git"
   },
-  "bugs": {
-    "url": "https://github.com/choiruladamm/indo-dev-utils/issues"
-  },
-  "homepage": "https://github.com/choiruladamm/indo-dev-utils#readme",
-  "peerDependencies": {
-    "zod": "^3.0.0"
-  },
-  "peerDependenciesMeta": {
-    "zod": {
-      "optional": true
-    }
-  },
+  "packageManager": "pnpm@9.0.0",
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
-    "@eslint/js": "^9.39.1",
-    "@types/node": "^22.10.2",
-    "@vitest/coverage-v8": "2.1.9",
-    "@vitest/ui": "^2.1.8",
-    "eslint": "^9.39.1",
-    "prettier": "^3.4.2",
-    "publint": "^0.3.15",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.49.0",
-    "vitest": "^2.1.8",
-    "zod": "^3.24.1"
+    "prettier": "^3.4.2"
   }
 }
