docs: update homepage url in package.json

--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -99,7 +99,7 @@
   "bugs": {
     "url": "https://github.com/choiruladamm/indo-dev-utils/issues"
   },
-  "homepage": "https://github.com/choiruladamm/indo-dev-utils#readme",
+  "homepage": "https://toolkit.adamm.cloud/docs",
   "peerDependencies": {
     "zod": "^3.0.0"
   },
